node color based on score dictionary

--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1445,
+   "execution_count": 1481,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1446,
+   "execution_count": 1482,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1447,
+   "execution_count": 1483,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1448,
+   "execution_count": 1484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1449,
+   "execution_count": 1485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1450,
+   "execution_count": 1508,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1451,
+   "execution_count": 1487,
    "metadata": {},
    "outputs": [
     {
@@ -155,19 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1452,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in G.nodes():\n",
     "    G.nodes[node]['descendants'] = len(nx.descendants(G, node))\n",
     "G.nodes['Microeconomics']['score'] = 0.8\n",
-    "    \n"
+    "   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1453,
+   "execution_count": 1489,
    "metadata": {},
    "outputs": [
     {
@@ -186,12 +186,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Scores test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avrg(list): \n",
+    "    c = 0\n",
+    "    for i in list: \n",
+    "        c += i\n",
+    "    return c / len(list)\n",
+    "\n",
+    "scores = {\"Nobel laureates (memory)\" : [1,  0, 1]}\n",
+    "for i in scores: \n",
+    "    print(avrg(scores[i]))\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Convert it to PyVis graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1454,
+   "execution_count": 1490,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1455,
+   "execution_count": 1491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1456,
+   "execution_count": 1492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1458,
+   "execution_count": 1494,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +310,7 @@
        "'rgba(255, 255, 0, 1)'"
       ]
      },
-     "execution_count": 1458,
+     "execution_count": 1494,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1459,
+   "execution_count": 1495,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1460,
+   "execution_count": 1496,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +643,7 @@
        "  'score': 0.31}]"
       ]
      },
-     "execution_count": 1460,
+     "execution_count": 1496,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1461,
+   "execution_count": 1497,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1462,
+   "execution_count": 1498,
    "metadata": {},
    "outputs": [
     {
@@ -664,10 +698,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x117098f80>"
+       "<IPython.lib.display.IFrame at 0x1187e4bc0>"
       ]
      },
-     "execution_count": 1462,
+     "execution_count": 1498,
      "metadata": {},
      "output_type": "execute_result"
     }
