score change dynamically

--- a/tests/unordered_test1.ipynb
+++ b/tests/unordered_test1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1481,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1482,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1483,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1484,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1485,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1508,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1487,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -155,19 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in G.nodes():\n",
     "    G.nodes[node]['descendants'] = len(nx.descendants(G, node))\n",
-    "G.nodes['Microeconomics']['score'] = 0.8\n",
     "   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1489,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -191,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6666666666666666\n"
+      "{'descendants': 0, 'score': 0.3}\n"
      ]
     }
    ],
@@ -209,10 +208,15 @@
     "        c += i\n",
     "    return c / len(list)\n",
     "\n",
-    "scores = {\"Nobel laureates (memory)\" : [1,  0, 1]}\n",
-    "for i in scores: \n",
-    "    print(avrg(scores[i]))\n",
-    "    \n",
+    "scores = {\"Nobel laureates (memory)\" : 0.3, \"Macroeconomic data\": 0.5, \"Economics\": 1}\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in G.nodes(): \n",
+    "    for n in scores: \n",
+    "        if i == n: \n",
+    "            G.nodes[i]['score'] = scores[n]\n",
+    "print(G.nodes[\"Nobel laureates (memory)\"])\n",
     "    \n"
    ]
   },
@@ -225,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1490,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1491,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1492,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,14 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1493,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in net.nodes:\n",
     "    node['title'] = str(G.nodes[node['id']].get('descendants'))\n",
     "    node[\"size\"] = (G.nodes[node['id']].get('descendants') + 1) * normalizar\n",
-    "    node['score'] = G.nodes[node['id']].get('score', 0.31)"
+    "    node['score'] = (G.nodes[node['id']].get('score', 0.31))"
    ]
   },
   {
@@ -301,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1494,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +314,7 @@
        "'rgba(255, 255, 0, 1)'"
       ]
      },
-     "execution_count": 1494,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1495,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,28 +343,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1496,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'color': 'rgba(255, 158, 0, 1)',\n",
+       "[{'color': 'rgba(0, 255, 0, 1)',\n",
        "  'descendants': 26,\n",
+       "  'score': 1,\n",
        "  'size': 100.0,\n",
        "  'id': 'Economics',\n",
        "  'label': 'Economics',\n",
        "  'shape': 'dot',\n",
-       "  'title': '26',\n",
-       "  'score': 0.31},\n",
-       " {'color': 'rgba(102, 255, 0, 1)',\n",
+       "  'title': '26'},\n",
+       " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 9,\n",
-       "  'score': 0.8,\n",
        "  'size': 37.03703703703704,\n",
        "  'id': 'Microeconomics',\n",
        "  'label': 'Microeconomics',\n",
        "  'shape': 'dot',\n",
-       "  'title': '9'},\n",
+       "  'title': '9',\n",
+       "  'score': 0.31},\n",
        " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 8,\n",
        "  'size': 33.333333333333336,\n",
@@ -457,14 +461,14 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 158, 0, 1)',\n",
+       " {'color': 'rgba(255, 255, 0, 1)',\n",
        "  'descendants': 0,\n",
+       "  'score': 0.5,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Macroeconomic data',\n",
        "  'label': 'Macroeconomic data',\n",
        "  'shape': 'dot',\n",
-       "  'title': '0',\n",
-       "  'score': 0.31},\n",
+       "  'title': '0'},\n",
        " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
@@ -545,14 +549,14 @@
        "  'shape': 'dot',\n",
        "  'title': '0',\n",
        "  'score': 0.31},\n",
-       " {'color': 'rgba(255, 158, 0, 1)',\n",
+       " {'color': 'rgba(255, 153, 0, 1)',\n",
        "  'descendants': 0,\n",
+       "  'score': 0.3,\n",
        "  'size': 3.7037037037037037,\n",
        "  'id': 'Nobel laureates (memory)',\n",
        "  'label': 'Nobel laureates (memory)',\n",
        "  'shape': 'dot',\n",
-       "  'title': '0',\n",
-       "  'score': 0.31},\n",
+       "  'title': '0'},\n",
        " {'color': 'rgba(255, 158, 0, 1)',\n",
        "  'descendants': 0,\n",
        "  'size': 3.7037037037037037,\n",
@@ -643,7 +647,7 @@
        "  'score': 0.31}]"
       ]
      },
-     "execution_count": 1496,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1497,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1498,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -698,10 +702,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1187e4bc0>"
+       "<IPython.lib.display.IFrame at 0x110ff6270>"
       ]
      },
-     "execution_count": 1498,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
