--- a/tests/test2_question_nodes.ipynb
+++ b/tests/test2_question_nodes.ipynb
@@ -17,6 +17,51 @@
     "import networkx as nx\n",
     "from pyvis.network import Network "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = nx.DiGraph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hierarchy = {\n",
+    "    #Econ\n",
+    "    \"Economics\" : [\"Microeconomics\", \"Macroeconomics\", \"International Economics\", \"Research\"],\n",
+    "    \"Microeconomics\" : [\"Competitive markets\", \"Consumer's choice\", \"Firm's behavior\", \"Non-competitive markets\", \"Government interventions\", \"Market failures\", \"Labor market\", \"Game thoery\", \"Innovations\"], \n",
+    "    \"Macroeconomics\" : [\"Macroeconomic data\", \"Technology and long-run growth\", \"Labor market\", \"AD-AS model\", \"Money and banks\", \"Monetary and fiscal policy\", \"Economic fluctuations and crises\", \"Institutions and Inequality\"], \n",
+    "    \"International Economics\" : [\"Specialization and trade\", \"Protectionism\", \"Currencies\", \"Environment and sustainable development\"],\n",
+    "    \"Research\" : [\"Nobel laureates (memory)\", \"Nobel research (connectivity)\"], \n",
+    "    #Finance \n",
+    "    \"Finance\" : [\"Financial Planning\", \"Banks and the banking system\", \"Saving Money\", \"Borrowing Money, Credit\", \"Investments and Risk Management\", \"Insurance\", \"Financial Fraud\", \"Crowdfunding\", \"Cryptocurrencies\"], \n",
+    "    'Market failures': [\"Monetary and fiscal policy\"]\n",
+    "}\n",
+    "\n",
+    "#edge maker\n",
+    "def edge_maker(graph, parent, children): \n",
+    "    for child in children: \n",
+    "        graph.add_edge(parent, child)\n",
+    "\n",
+    "for parent, children in hierarchy.items(): \n",
+    "    edge_maker(G, parent, children)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questions_data = pd.DataFrame(\"../assets/excels/2024_IEO_econ_MCQ_PersonalScores.xlsx\")\n"
+   ]
   }
  ],
  "metadata": {
