questions as nodes

--- a/tests/test2_question_nodes.ipynb
+++ b/tests/test2_question_nodes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "19  Stagflation, know the stages of economy and mo...                 1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,18 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(question_data.shape[0]): \n",
-    "    G.add_node(question_data['title'][i])\n",
-    "    #G.add_edge(question_data['Topic (my opinion)'][i], question_data['Question'][i])"
+    "    G.add_edge(question_data['Topic (my opinion)'][i], question_data['title'][i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -338,35 +337,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OutEdgeView([('Economics', 'Microeconomics'), ('Economics', 'Macroeconomics'), ('Economics', 'International Economics'), ('Economics', 'Research'), ('Microeconomics', 'Competitive markets'), ('Microeconomics', \"Consumer's choice\"), ('Microeconomics', \"Firm's behavior\"), ('Microeconomics', 'Non-competitive markets'), ('Microeconomics', 'Government interventions'), ('Microeconomics', 'Market failures'), ('Microeconomics', 'Labor market'), ('Microeconomics', 'Game theory'), ('Microeconomics', 'Innovations'), ('Macroeconomics', 'Macroeconomic data'), ('Macroeconomics', 'Technology and long-run growth'), ('Macroeconomics', 'Labor market'), ('Macroeconomics', 'AD-AS model'), ('Macroeconomics', 'Money and banks'), ('Macroeconomics', 'Monetary and fiscal policy'), ('Macroeconomics', 'Economic fluctuations and crises'), ('Macroeconomics', 'Institutions and Inequality'), ('International Economics', 'Specialization and trade'), ('International Economics', 'Protectionism'), ('International Economics', 'Currencies'), ('International Economics', 'Environment and sustainable development'), ('Research', 'Nobel laureates (memory)'), ('Research', 'Nobel research (connectivity)'), ('Market failures', 'Monetary and fiscal policy'), ('Finance', 'Financial Planning'), ('Finance', 'Banks and the banking system'), ('Finance', 'Saving Money'), ('Finance', 'Borrowing Money, Credit'), ('Finance', 'Investments and Risk Management'), ('Finance', 'Insurance'), ('Finance', 'Financial Fraud'), ('Finance', 'Crowdfunding'), ('Finance', 'Cryptocurrencies')])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "G.edges()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n"
+      "{'Competitive markets', 'Microeconomics', 'Economics'}\n"
      ]
+    }
+   ],
+   "source": [
+    "print(nx.ancestors(G, 'Taxes 1'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
+      "netowork2.html\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"netowork2.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x143a31df0>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -375,7 +394,7 @@
     "net = Network(notebook=True, directed=True)\n",
     "net.from_nx(G)\n",
     "\n",
-    "#net.show('netowork.html')"
+    "net.show('netowork2.html')"
    ]
   }
  ],
